# openrelik-worker-containers

./: .gitignore  .pylintrc  Dockerfile  README.md  Tiltfile  openrelik.yaml  pyproject.toml
.devcontainer/: devcontainer.json
src/: app.py  container_drift.py  container_export.py  container_file_extract.py  container_list.py  container_task.template  utils.py
tests/: test_container_drift.py  test_container_export.py  test_container_file_extract.py  test_container_list.py  test_utils.py
